istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-poc
spec:
  hosts:
    - "*"
  gateways:
    - services-gateway
  http:
    - match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: service-a-service
            port:
              number: 3000
